[gd_scene load_steps=3 format=3 uid="uid://sjcihdv8ggt4"]

[ext_resource type="Script" path="res://src/UI/Components/Scripts/tab.gd" id="1_wko4n"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3pubc"]
resource_local_to_scene = true
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(1, 0.365, 0.365, 1)
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_detail = 1

[node name="Tab" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_3pubc")
script = ExtResource("1_wko4n")

[node name="Label" type="Label" parent="."]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Tab"
horizontal_alignment = 1

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="renamed" from="." to="." method="_on_renamed"]
